modif menu site sous menu

--- a/sites/views/sites_menu.xml
+++ b/sites/views/sites_menu.xml
@@ -86,10 +86,10 @@
 	</record>
 <menuitem name="Site en Maintenance" id="sites_root_menu"/>
 
-<menuitem name="Sites" id="sites_sites_menu"
+<menuitem name="Sites Global" id="sites_sites_menu"
 	parent="sites_root_menu"
 	sequence="1"/>
-<menuitem name="Sites" id="sites_sites_menu"
+<menuitem name="Sites Détaillés" id="sites_sitesD_menu"
 	parent="sites_sites_menu"
 	action="action_sites_sites"
 	/>
