--- a/sites/views/sites_menu.xml
+++ b/sites/views/sites_menu.xml
@@ -86,7 +86,7 @@
 	</record>
 <menuitem name="Site en Maintenance" id="sites_root_menu"/>
 
-<menuitem name="Sites Global" id="sites_sites_menu"
+<menuitem name="Sites Global" id="sites_global_menu"
 	parent="sites_root_menu"
 	sequence="1"/>
 <menuitem name="Sites Détaillés" id="sites_sitesD_menu"
