--- a/sites/views/sites_menu.xml
+++ b/sites/views/sites_menu.xml
@@ -90,7 +90,7 @@
 	parent="sites_root_menu"
 	sequence="1"/>
 <menuitem name="Sites Détaillés" id="sites_sitesD_menu"
-	parent="sites_sites_menu"
+	parent="sites_global_menu"
 	action="action_sitesD_sites"
 	/>
 <menuitem name="Immatriculation" id="sites_immat_menu"
