--- a/sites/views/sites_menu.xml
+++ b/sites/views/sites_menu.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
 	<record model="ir.actions.act_window"
+	id="action_sitesG_sites">
+		<field name="name">Sites Gloabl</field>
+		<field name="res_model">sites.sites</field>
+		<field name="view_mode">tree</field>
+	</record>
+	<record model="ir.actions.act_window"
 	id="action_sitesD_sites">
 		<field name="name">Sites Détaillés</field>
 		<field name="res_model">sites.sites</field>
@@ -88,6 +94,7 @@
 
 <menuitem name="Sites Global" id="sites_global_menu"
 	parent="sites_root_menu"
+	action="action_sitesG_sites"
 	sequence="1"/>
 <menuitem name="Sites Détaillés" id="sites_sitesD_menu"
 	parent="sites_global_menu"
