--- a/sites/views/sites_menu.xml
+++ b/sites/views/sites_menu.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
 	<record model="ir.actions.act_window"
-	id="action_sitesG_sites">
-		<field name="name">Sites Gloabl</field>
-		<field name="res_model">sites.sites</field>
-		<field name="view_mode">tree</field>
-	</record>
-	<record model="ir.actions.act_window"
-	id="action_sitesD_sites">
-		<field name="name">Sites Détaillés</field>
+	id="action_sites_sites">
+		<field name="name">Sites</field>
 		<field name="res_model">sites.sites</field>
 		<field name="view_mode">tree,form</field>
 	</record>
@@ -92,14 +86,10 @@
 	</record>
 <menuitem name="Site en Maintenance" id="sites_root_menu"/>
 
-<menuitem name="Sites Global" id="sites_global_menu"
+<menuitem name="Sites" id="sites_site_menu"
 	parent="sites_root_menu"
-	action="action_sitesG_sites"
+	action="action_sites_sites"
 	sequence="1"/>
-<menuitem name="Sites Détaillés" id="sites_sitesD_menu"
-	parent="sites_global_menu"
-	action="action_sitesD_sites"
-	/>
 <menuitem name="Immatriculation" id="sites_immat_menu"
 	parent="sites_root_menu"
 	action="action_immat_sites"
